# snap

./: .gitignore  Dockerfile  Makefile  README.md
.github/workflows/: deploy.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/game/: mod.rs
backend/src/game/cards/: mod.rs
backend/src/manager/: mod.rs
backend/src/message/: mod.rs
backend/src/websocket/: mod.rs
frontend/: elm.json  index.html  main.css
frontend/src/: Main.elm  ServerMessage.elm  WebSocket.elm
frontend/src/Game/: Cards.elm  Data.elm  Events.elm  View.elm
scripts/: generate-cards.py
