[package]
name = "snap-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
warp = "0.3"
rand = "0.9"
itertools = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
papaya = "0.2.3"
